# WorkStealing

./: .gitignore  CMakeLists.txt  Makefile  README.md  array.c  array.h  fifo_merge_sort.c  fifo_thread_pool.c  fork_join_merge_sort.c  main.c  make_data.rb  merge_sort.c  post_fetch_merge_sort.c  sort.h  split_merge_sort.c  task.c  task.h  task_deque.c  task_deque.h  thread_pool.h  thread_pool_merge_sort.c  util.c  util.h  work_stealing_thread_pool.c
